@@ -51,6 +51,7 @@ NOTE: Do not "tidy" or change the indenting here, or we break svn annotate
       A checkbox now optionally toggles its visibility (AZAWAWI)
     - Padre::Wx::FindResult: Get rid of global variable, shorter column
       titles, both columns now wxLIST_AUTOSIZE (ZENOG)
+    - Call relocale() for all elements of the Bottom panel (ZENOG)
 
 0.66 2010.07.01
     - Improved the quality and integration of the default window size (ADAMK)
